--- a/templates/index.twig
+++ b/templates/index.twig
@@ -8,7 +8,7 @@
     <title>TODOList</title>
     <link rel="stylesheet" href="css/material.min.css">
     <script src="js/material.min.js"></script>
-    <!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,31 +21,53 @@
     </header>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <form action="engine.php" method="POST">
+            <form action="engine.php?action=add" method="POST">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <input class="mdl-textfield__input" type="text" id="item-title" name="item-title">
                     <label class="mdl-textfield__label" for="item-title">Add stuff to do...</label>
                 </div>
                 <br>
-                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" type="submit" value="Add">
+                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
+                       type="submit" value="Add">
             </form>
             <br>
-            <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
-                <thead>
-                <tr>
-                    <th class="mdl-data-table__cell--non-numeric">Title</th>
-                    <th class="mdl-data-table__cell--non-numeric">Delete</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for item in items %}
-                <tr>
-                    <td class="mdl-data-table__cell--non-numeric">{{ item.title }}</td>
-                    <td class="mdl-data-table__cell--non-numeric"><button  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Delete</button></td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            <form action="engine.php?action=delete" method="POST" id="form-delete">
+                <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+                    <thead>
+                    <tr>
+                        <th class="mdl-data-table__cell--non-numeric">
+                            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-item-all">
+                                <input type="checkbox" id="checkbox-item-all" name=checkbox-item-all" class="mdl-checkbox__input">
+                            </label>
+                        </th>
+                        <th class="mdl-data-table__cell--non-numeric">Title</th>
+                        <th class="mdl-data-table__cell--non-numeric">Delete</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for item in items %}
+                        <tr>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-item-{{ item.id }}">
+                                    <input type="checkbox" id="checkbox-item-{{ item.id }}" name=checkbox-item-{{ item.id }}" class="mdl-checkbox__input">
+                                </label>
+                            </td>
+                            <td class="mdl-data-table__cell--non-numeric">{{ item.title | raw }}</td>
+                            <td class="mdl-data-table__cell--non-numeric">
+                                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                    Delete
+                                </button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <br>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                    Delete
+                    selected items
+                </button>
+            </form>
         </div>
     </main>
 </div>
